# flakes

./: .gitignore  CLAUDE.md  README.md  flake.nix  nvfetcher.toml  result  update.sh  version-cache.json
_sources/: generated.json  generated.nix
arch/: claude-code.nix  darkman.nix  home.nix  hyprland.nix  no-package-stage2.nix  no-package.nix
arch/toshy/: toshy_config_manager.py  user_config.py
common/: bat.nix  cache.nix  codex.nix  fish.nix  ghostty.nix  git.nix  lazygit.nix  starship.nix  vim.nix  yazi.nix
flake/lib/: hosts.nix
gen-compose/: README.md  default.nix  pyproject.toml
gen-compose/src/gen_compose/: __init__.py
homelab/: base.nix
mbp/: Xcompose.nix  Xcompose.yaml  brew.nix  configuration.nix  gpgmejson.json  home-root.nix  home.nix  home.tmpl.nix  phoenix.js  wezterm.fish
meow/: borg.nix  configuration.nix  hardware-configuration.nix  home.nix  matrix.nix
modules/: Xcompose_mac.nix  chsh.nix  power_mac.nix
notebooks/: hydra_api_explore.ipynb  hydra_nixpkgs_explore.ipynb
orbstack/: configuration.nix  home.nix  incus.nix  orbstack.nix
pkgs/: default.nix
secrets/: SOUL.md  forgejo_runner_secret  hermes.env  hindsight.env  homelab-disk-id.nix  homelab.nix  homelab_borg.pass  homelab_media.nix  homeserver.yaml  id_ed25519_codex.pub  id_ed25519_homelab_borg  id_ed25519_homelab_borg.pub  id_ed25519_litter.pub  id_ed25519_meow_borg  id_ed25519_meow_borg.pub  id_rsa.pub  lightquantum.me.signing.key  matter-webui-auth.env  qbittorrent_password  qbittorrent_password_pbkdf2  sparkyfitness.env  ssh.nix  syncthing.pass  tailscale_key  tg3-rs.env
(+197 files in other folders)
