[project]
name = "gen-compose"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "LightQuantum", email = "self@lightquantum.me"},
]
dependencies = [
    "click>=8.1.7",
    "pyyaml>=6.0.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
gen-compose = "gen_compose:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
